fix hero left alignment

--- a/components/home/DG/DG.module.scss
+++ b/components/home/DG/DG.module.scss
@@ -138,6 +138,7 @@
     position: relative;
     height: calc(100vh - 72px);
     width: 100% !important;
+    max-width: 1400px;
     padding: 0 60px;
     margin-top: -30px;
 
